--- a/Oppgave5/src/App.scss
+++ b/Oppgave5/src/App.scss
@@ -1,9 +1,20 @@
-import Modal from '.styles/Modal';
-import CompletedList from '.styles/Modal';
-import CompletedListItem from '.styles/Modal';
-import Navbar from '.styles/Modal';
-import Search from '.styles/Modal';
-import Title from '.styles/Modal';
-import TodoButton from '.styles/Modal';
-import TodoCard from '.styles/Modal';
-import TodoCardList from '.styles/Modal';
+@import './styles/Modal';
+@import './styles/CompletedList';
+@import './styles/CompletedListItem';
+@import './styles/Navbar';
+@import './styles/Search';
+@import './styles/TodoButton';
+@import './styles/TodoCard';
+@import './styles/TodoCardList';
+
+#jippi {
+    margin: 100px;
+    text-align: center;
+    font-size: 40px;
+}
+
+main {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
