--- a/Oppgave5/src/styles/Modal.scss
+++ b/Oppgave5/src/styles/Modal.scss
@@ -1,9 +1,89 @@
 .modal {
-    backgroud-color: #fefefe;
-    top: 195;
-    left: 520;
-    width: 350;
-    height: 378;
-    box-shadow: 0px 1px 
+    position: absolute;
+    left: 700px;
+    top: 250px;
+    z-index: 1;
+    background-color: #fefefe;
+    border-radius: 8px;
+    width: 350px;
+    height: 378px;
+    box-shadow:  200px 200px 200px 1000px #00000029;
 
+    #modalHeader {
+        
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #E6E6E6;
+        width: 100%;
+        height: 50px;
+
+        #modalTitle{
+            text-align: left;
+            align-self: center;
+            margin-left: 20px;    
+            letter-spacing: 0px;
+            color: #333333;
+        }
+
+        .close {
+            position: absolute;
+            right: 30px;
+            align-self: center;
+            width: 15px;
+            height: 30px;
+            opacity: 0.3;
+          }
+
+          .close:hover {
+            opacity: 1;
+          }
+
+          .close:before, .close:after {
+            position: absolute;
+            left: 15px;
+            content: ' ';
+            height: 33px;
+            width: 2px;
+            background-color: #333;
+          }
+
+          .close:before {
+            transform: rotate(45deg);
+          }
+
+          .close:after {
+            transform: rotate(-45deg);
+          }
+    }
+
+    #modalForm {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 40px 0px 40px;
+
+        button{
+            top: 498px;
+            left: 556px;
+            width: 100%;
+            height: 32px;
+            background: #56D4C2 0% 0% no-repeat padding-box;
+            border: none;
+            letter-spacing: 0px;
+            color: #FFFFFF;
+            margin-top: 30px;
+            font-size: 20px;
+        }
+
+        label {
+            margin-top: 12px;
+            margin-bottom:  5px;
+        }
+
+        input {
+            height: 25px;
+            border-radius: 5px;
+            border: 2px solid #b1b1b1;
+        }
+    }
+  
 }
