--- a/Oppgave5/src/styles/TodoCard.scss
+++ b/Oppgave5/src/styles/TodoCard.scss
@@ -5,7 +5,7 @@
     opacity: 1;
     height: 95%;
     margin: 5% 0% 5% 1%;
-    width: 400px;
+    width: 30%;
 
     button {
         float: right;
